--- a/AL2023_lamp/roles/common/handlers/main.yml
+++ b/AL2023_lamp/roles/common/handlers/main.yml
@@ -2,7 +2,7 @@
 # Handler to handle common notifications. Handlers are called by other plays.
 # See http://docs.ansible.com/playbooks_intro.html for more information about handlers.
 
-- name: restart ntp
+- name: restart chrony
   service:
-    name: ntpd
+    name: chronyd
     state: restarted
