--- a/AL2023_lamp/roles/web/tasks/copy_code.yml
+++ b/AL2023_lamp/roles/web/tasks/copy_code.yml
@@ -4,7 +4,7 @@
 
 - name: Copy the code from repository
   git:
-    repo: "{{ repository }}"
+    repo: https://github.com/twomidle/mywebapp
     dest: /var/www/html/
 
 - name: Creates the index.php file
