--- a/AL2023_lamp/ansible.cfg
+++ b/AL2023_lamp/ansible.cfg
@@ -1,3 +1,2 @@
 [ssh_connection]
-#ssh_args = -F "./ssh_config_{{ project_env }}"
-ssh_args = -F "./ssh_config_development"
+ssh_args = -F "./ssh_config_local"
