--- a/AL2023_lamp/roles/db/handlers/main.yml
+++ b/AL2023_lamp/roles/db/handlers/main.yml
@@ -1,12 +1,8 @@
 ---
 # Handler to handle DB tier notifications
 
-- name: restart mysql
+- name: restart mariadb
   service:
-    name: mysqld
+    name: mariadb
     state: restarted
 
-- name: restart iptables
-  service:
-    name: iptables
-    state: restarted
